# changelog_bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sample_commits.json
.github/workflows/: ci.yml
app/: exceptions.py
app/api/v1/: api.py
app/core/: config.py
app/models/: changelog.py
app/services/: changelog_generator.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Navbar.js  RouteHandler.js
frontend/src/config/: axios.js
frontend/src/pages/: ChangelogDetails.js  GenerateChangelog.js  Home.js  RepositoryChangelogs.js  ViewChangelogs.js
