[tool.poetry]
name = "changelog-generator"
version = "0.1.0"
description = "AI-powered changelog generator"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
aiohttp = "^3.9.1"
pydantic = "^2.5.3"
pydantic-core = "^2.14.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
